# AtmosNet-LSTM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.flyte/: config.yaml
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.flyte  docker-compose-ml.yml  prometheus.yml
docker/grafana/dashboards/: atm_forecast_dashboard.json
docker/grafana/provisioning/dashboards/: dashboards.yml
scripts/: serve.sh  train.sh
src/atm_forecast/: __init__.py
src/atm_forecast/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
src/atm_forecast/api/routes/: __init__.py  data.py  health.py  monitoring.py  predictions.py
src/atm_forecast/config/: __init__.py  settings.py
src/atm_forecast/data/: __init__.py  data_extraction.py  ingestion.py  lake.py  manifest.py  pipeline.py  pipeline_cli.py  pipeline_state.py  preprocessing.py
src/atm_forecast/features/: __init__.py  engineering.py  feature_engineering.py
src/atm_forecast/frontend_deployment/: __init__.py  streamlit_frontend.py
src/atm_forecast/models/: Model_initialiazatin.py  __init__.py  lstm.py  registry.py
src/atm_forecast/monitoring/: __init__.py  ct_monitor.py  drift.py  evidently_monitor.py  metrics.py  mlflow_tracker.py  wandb_tracker.py
src/atm_forecast/orchestration/: data_pipeline_airflow.py  ml_pipeline_orchestrator.py
src/atm_forecast/training/: __init__.py  __main__.py  evaluate.py  train.py
src/atm_forecast/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_config.py  test_features.py  test_preprocessing.py
